[tool.poetry]
name = "lab6-intelligent-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "lab6_intelligent_search", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
networkx = "^3.6.1"
matplotlib = "^3.10.9"
fastapi = "^0.136.1"
uvicorn = "^0.47.0"
pydantic = "^2.13.4"
pgmpy = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"